[package]
name = "privacy-swap"
version = "0.1.0"
edition = "2021"
description = "ZK-secure private swap program using Light Protocol and Pinocchio"

[workspace]
# Exclude from parent workspace

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
test-sbf = []
# Enable verbose logging for debugging - DISABLE IN PRODUCTION for privacy!
verbose-logs = []

[dependencies]
# Pinocchio - lightweight Solana program SDK
pinocchio = { version = "0.10", features = ["cpi", "copy"] }
pinocchio-token = "0.4"
pinocchio-system = "0.4"
pinocchio-pubkey = "0.3"
five8_const = "0.1"

# Solana CPI primitives
solana-instruction-view = "1.0"

# Solana logging for no_std programs
solana-program-log = "1.1"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
tokio = { version = "1", features = ["full"] }
